set overflow: auto; to prevent from hiding scroll bar when modal opens. comment out  the codes to prevent from shifting to left on rootpage when I closes the modal screen.

--- a/app/assets/stylesheets/bootstrap/bootstrap.scss
+++ b/app/assets/stylesheets/bootstrap/bootstrap.scss
@@ -5867,7 +5867,7 @@ button.close {
   border: 0;
 }
 .modal-open {
-  overflow: hidden;
+  overflow: auto;
 }
 .modal {
   position: fixed;
